# windows-lean-loop

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
lean_loop/: __init__.py  __main__.py  agent_protocol.py  api.py  audit.py  cli.py  config.py  dashboard.py  explanation.py  jsonutil.py  lean.py  lsp_tools.py  mathlib_index.py  mathlib_search.py  mcp_client.py  process_control.py  project_config.py  prompts.py  python_transport.py  queue.py  race.py  retrieval_cache.py  runner.py  state.py  subscription_backend.py  timings.py  workflow.py
lean_loop/dashboard_assets/: dashboard.css  dashboard.js  index.html
tests/: test_agent_protocol.py  test_api.py  test_audit.py  test_cli_subscription.py  test_curl_integration.py  test_dashboard.py  test_explanation.py  test_lean.py  test_lsp_tools.py  test_mathlib_search.py  test_process_control.py  test_project_config.py  test_python_transport.py  test_queue.py  test_race.py  test_state.py  test_subscription_backend.py  test_workflow.py
tests/fixtures/codex_cli_0_144_4/: current-multi-message.jsonl  duplicate-final.jsonl  legacy-single-message.jsonl  malformed-event.jsonl  manifest.json  no-final.jsonl  nonzero-stderr.txt  nonzero-with-valid-final.jsonl  stderr-noise.txt  tool-events-with-final.jsonl  truncated-no-terminal.jsonl
